[package]
name = "rusty_snake"
version = "0.1.0"
authors = ["Alex McRae <alex@alexandermcrae.com>", "Magnus Larsen <imjustagan@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
#TODO: specify versions
rocket = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
regex = "*"
lazy_static = "*"
arc-swap = "0.4.4"
rand = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]

